add test-ooxml-ss target to test just (S)XSSF classes. Duration after running ant clean: test-ooxml-ss 1m55s, test-ooxml 2m26s, test 5m55s
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1739668 13f79535-47bb-0310-9956-ffa450edef68